fix align with scrollbar

--- a/sfeos-web/src/components/StacCollectionSelector.css
+++ b/sfeos-web/src/components/StacCollectionSelector.css
@@ -10,6 +10,7 @@
   padding: 15px;
   padding-bottom: 2px;
   width: 280px;
+  max-width: 100%;
   box-sizing: border-box;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
